cluster/node-red/node-red-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
  labels:
    io.kompose.service: node-red
  name: node-red
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: node-red
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
      labels:
        io.kompose.network/node-red-net: "true"
        io.kompose.service: node-red
    spec:
#      initContainers:
#       - name: copy
#         image: busybox:1.28
#         command: ["/bin/sh", "-c", "/mnt/data_remote/copy_to_local.sh"]
#         volumeMounts:
#            - mountPath: /data
#              name: node-red-pvc
#            - mountPath: /mnt/data_remote
#              name: remote-data
      containers:
        - env:
            - name: TZ
              value: Europe/Berlin
          image: nodered/node-red:latest
          name: node-red
          ports:
            - containerPort: 1880
            - containerPort: 80
            - containerPort: 1883
            - containerPort: 1900
              protocol: UDP
            - containerPort: 2100
              protocol: UDP
            - containerPort: 8123
              protocol: TCP
            - containerPort: 5683
              protocol: UDP
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 0
#            privileged: true
          volumeMounts:
            - mountPath: /data
              name: node-red-pvc
#            - mountPath: /mnt/data_remote
#              name: remote-data
      restartPolicy: Always
      volumes:
        - name: node-red-pvc
          persistentVolumeClaim:
            claimName: node-red-bloc
#        - name: remote-data
#          persistentVolumeClaim:
#            claimName: node-red-pvc
