cluster/node-red/node-red-service-tcp.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/address-pool: server
  name: node-red-tcp
  namespace: node-red
spec:
  ports:
    - name: http
      port: 1880
      targetPort: 1880
      protocol: TCP
    - name: hue
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    io.kompose.service: node-red
  type: LoadBalancer
  loadBalancerIP: 192.168.42.9
