cluster/node-red/node-red-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/address-pool: server
  name: node-red
  namespace: node-red
spec:
  ports:
    - name: http
      port: 80
      targetPort: 1880
      protocol: TCP
  selector:
    io.kompose.service: node-red
  type: ClusterIP
